--- a/main.html
+++ b/main.html
@@ -8,17 +8,15 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<header role="heading">
-		Header
-	</header>
+	<h1 role="heading">Heading</h1>
 	<nav role="navigation">
 		navbar
 	</nav>
-	<img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.istockphoto.com%2Fstock-photos%2Fnature-and-landscapes&psig=AOvVaw3J4D_PpcxRalEQm1GlV6tL&ust=1762657563192000&source=images&cd=vfe&opi=89978449&ved=0CBIQjRxqFwoTCOCmo6HJ4ZADFQAAAAAdAAAAABAE" role="img"/>
+	<img src="" alt="image" role="img"/>
 	<section aira-labelledby="about-heading">
 		Description
 	</section>
-	<ol role="list">
+	<ul role="list">
 		<li role="listitem">
 			item1
 		</li>
@@ -28,7 +26,7 @@
 		<li role="listitem">
 			item1
 		</li>
-	</ol>
+	</ul>
     <script type="text/javascript" src="./script.js">
 </script>
 
